dataset1235/2025-2/1153765216/users/3146567693/executions/2747719322_48684178.log
== SUBMISSION (2025-08-26 15:26:50)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
valor_ttl = float(imput("Digite o valor total de vendas: "))
lucro = valor_ttl + (30/100)

print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_ttl = float(imput("Digite o valor total de vendas: "))
                      ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_ttl = float(imput("Digite o valor total de vendas: "))
                      ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_ttl = float(imput("Digite o valor total de vendas: "))
                      ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_ttl = float(imput("Digite o valor total de vendas: "))
                      ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_ttl = float(imput("Digite o valor total de vendas: "))
                      ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_ttl = float(imput("Digite o valor total de vendas: "))
                      ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 15:27:50)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
valor_ttl = float(input("Digite o valor total de vendas: "))
lucro = valor_ttl + (30/100)

print(round(lucro,2))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
Digite o valor total de vendas: 1453.18
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
Digite o valor total de vendas: 700.8
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
Digite o valor total de vendas: 200.3
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
Digite o valor total de vendas: 450.8
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
Digite o valor total de vendas: 551.32
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
Digite o valor total de vendas: 1894.29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 15:28:42)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
valor_ttl = float(input("Digite o valor total de vendas: "))
lucro = valor_ttl * (30/100)

print(round(lucro,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
Digite o valor total de vendas: 435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
Digite o valor total de vendas: 210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
Digite o valor total de vendas: 60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
Digite o valor total de vendas: 135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
Digite o valor total de vendas: 165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
Digite o valor total de vendas: 568.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 15:27:54)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
valor_ttl = float(input("Digite o valor total de vendas: "))
lucro = valor_ttl + (30/100)

print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
Digite o valor total de vendas: 1453.18
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
Digite o valor total de vendas: 700.8
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
Digite o valor total de vendas: 200.3
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
Digite o valor total de vendas: 450.8
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
Digite o valor total de vendas: 551.32
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
Digite o valor total de vendas: 1894.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
